--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,20 @@
-SUBDIRS = src
+SUBDIRS = lib src
 
 man1_MANS = man/ugrep.1
 
 EXTRA_DIST = README.md LICENSE.txt CONTRIBUTING.md CODE_OF_CONDUCT.md
+
+all-local:	cp2bin
+
+.PHONY:		cp2bin
+
+# to copy the ugrep binary to ugrep/bin (joins ugrep.exe that's already there)
+cp2bin:		$(abs_top_builddir)/src/ugrep
+		-mkdir -p $(top_builddir)/bin
+		-cp -f $< $(top_builddir)/bin
+		@echo
+		@echo "OK"
+		@echo
 
 install-data-hook:
 		(mkdir -p $(datadir)/ugrep; \
