--- a/Makefile.in
+++ b/Makefile.in
@@ -906,6 +906,11 @@ install-data-hook:
 		 echo "|             https://github.com/Genivia/ugrep         |"; \
 		 echo "|______________________________________________________|";
 
+.PHONY:		test
+
+test:		$(top_builddir)/src/ugrep
+		$(top_builddir)/src/ugrep -rltc++ copyright $(top_builddir)/src
+
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
 .NOEXPORT:
