--- a/Makefile.in
+++ b/Makefile.in
@@ -894,14 +894,14 @@ install-data-hook:
 		 echo "|                                                      |"; \
 		 echo "| You can use the ugrep command to search files.       |"; \
 		 echo "|                                                      |"; \
-		 echo "| Here are some useful aliases to consider for ugrep:  |"; \
+		 echo "| Some useful aliases to consider:                     |"; \
 		 echo "|   alias ug    = 'ugrep --color --pager'              |"; \
 		 echo "|   alias ux    = 'ugrep --color --pager -UX'          |"; \
 		 echo "|   alias grep  = 'ugrep --color --pager -G'           |"; \
 		 echo "|   alias egrep = 'ugrep --color --pager -E'           |"; \
 		 echo "|   alias fgrep = 'ugrep --color --pager -F'           |"; \
 		 echo "|   alias xgrep = 'ugrep --color --pager -W'           |"; \
-		 echo "|   alias xdump = 'ugrep --color --pager -Xo \"\"'       |"; \
+		 echo "|   alias xdump = 'ugrep --color --pager -X \"\"'        |"; \
 		 echo "|                                                      |"; \
 		 echo "| Thanks for using ugrep.                              |"; \
 		 echo "|                                                      |"; \
