--- a/configure.ac
+++ b/configure.ac
@@ -13,12 +13,25 @@ AX_CHECK_BZLIB([], [echo "libbz2 not found: option -z won't decompress .bz and .
 
 AX_CHECK_LZMALIB([], [echo "liblzma not found: option -z won't decompress .lzma and .xz files"])
 
+AC_ARG_WITH(grep-colors,
+  [AC_HELP_STRING([--with-grep-colors="GREP_COLORS"],
+                  [specifies the default ANSI SGR color parameters when variable GREP_COLORS is undefined])],
+  [with_grep_colors="$withval"],
+  [with_grep_colors=""])
+AC_MSG_CHECKING(for --with-grep-colors)
+if test "x$with_grep_colors" != "x"; then
+  AC_MSG_RESULT("$with_grep_colors")
+  EXTRA_CFLAGS="-DDEFAULT_GREP_COLORS=\"\\\"$with_grep_colors\\\"\" ${EXTRA_FLAGS}"
+else
+  AC_MSG_RESULT()
+fi
+
 AC_ARG_ENABLE(color,
   [AC_HELP_STRING([--enable-color],
-                  [enable colorized output by default without requiring ugrep flag --color=auto])],
+                  [enable colorized output by default without requiring ugrep flag --color])],
   [with_color="$enable_color"],
   [with_color="no"])
-AC_MSG_CHECKING(for enable color by default)
+AC_MSG_CHECKING(for --enable-color)
 if test "x$with_color" = "xyes"; then
   AC_MSG_RESULT(yes)
   EXTRA_CFLAGS="-DWITH_COLOR ${EXTRA_CFLAGS}"
@@ -31,12 +44,25 @@ AC_ARG_ENABLE(pager,
                   [enable pager by default without requiring ugrep flag --pager])],
   [with_pager="$enable_pager"],
   [with_pager="no"])
-AC_MSG_CHECKING(for enable pager by default)
+AC_MSG_CHECKING(for --enable-pager)
 if test "x$with_pager" = "xyes"; then
   AC_MSG_RESULT(yes)
   EXTRA_CFLAGS="-DWITH_PAGER ${EXTRA_CFLAGS}"
 else
   AC_MSG_RESULT(no)
+fi
+
+AC_ARG_ENABLE(mmap,
+  [AC_HELP_STRING([--disable-mmap],
+                  [disable mmap file reading])],
+  [with_no_mmap="yes"],
+  [with_no_mmap="no"])
+AC_MSG_CHECKING(for --disable-mmap)
+if test "x$with_no_mmap" = "xno"; then
+  AC_MSG_RESULT(no)
+else
+  AC_MSG_RESULT(yes)
+  EXTRA_CFLAGS="-DMAX_MMAP_SIZE=0 ${EXTRA_CFLAGS}"
 fi
 
 AC_SUBST(EXTRA_CFLAGS)
