--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,7 @@ language: cpp
 compiler:
   - clang
   - gcc
-before_install: autoreconf -fi
+before_install:
+  - sudo apt-get update
+  - sudo apt-get -y install libpcre2-dev
+  - autoreconf -fi
