--- a/Makefile.in
+++ b/Makefile.in
@@ -918,7 +918,17 @@ install-data-hook:
 .PHONY:		test
 
 test:		$(top_builddir)/src/ugrep
+		@echo
+		@echo "*** SINGLE-THREADED TESTS ***"
+		@echo
+		-cd tests; ./verify.sh -J1
+		@echo
+		@echo "*** MULTI-THREADED TESTS ***"
+		@echo
 		-cd tests; ./verify.sh
+		@echo
+		@echo "OK"
+		@echo
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
